@@ -814,6 +814,11 @@
 		</tr>
 
 		<tr>
+			<td><pre>-fastscbios &lt;1|0&gt;</pre></td>
+			<td>Disable Supercharger BIOS progress loading bars.</td>
+		</tr>
+
+		<tr>
 			<td><pre>-ssdir &lt;path&gt;</pre></td>
 			<td>The directory to save snapshot files to.</td>
 		</tr>
@@ -1122,6 +1127,7 @@
 					<tr><td>GL VSync</td><td>enable OpenGL vertical synchronization</td><td>-gl_vsync</td></tr>
 					<tr><td>Grab mouse</td><td>keep mouse in SDL window</td><td>-grabmouse</td></tr>
 					<tr><td>Center window (*)</td><td>attempt to center SDL window (requires restart)</td><td>-center</td></tr>
+					<tr><td>Fast SC/AR BIOS</td><td>Skip progress loading bars for SuperCharger ROMs</td><td>-fastscbios</td></tr>
 				</table>
 			</td>
 		</tr>
